--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html",
+    "test": "jest --watch"
   },
   "author": "Jonathan Heathcote",
   "license": "MIT",
@@ -14,7 +15,13 @@
     "preact": "^10.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
+    "babel-jest": "^24.9.0",
+    "jest": "^24.9.0",
     "less": "^3.10.3",
-    "parcel-bundler": "^1.12.3"
+    "parcel": "^1.12.4",
+    "parcel-bundler": "^1.12.3",
+    "window-crypto": "^1.1.0"
   }
 }
