--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html",
+    "build": "parcel build --public-url ./ src/index.html",
     "test": "jest --watch"
   },
   "author": "Jonathan Heathcote",
