--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "parcel src/index.html",
     "build": "parcel build --public-url ./ --no-minify src/index.html",
-    "test": "jest --watch"
+    "test": "jest --all",
+    "test-watch": "jest --watch"
   },
   "author": "Jonathan Heathcote",
   "license": "MIT",
